--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta http-equiv="Content-Type" content="text/html; charset="UTF-8" />
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 	
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
@@ -23,7 +23,7 @@
 <body>
 
 
-<center><h1>UbicaciÛn Solicitud</h1></center>
+<center><h1>Ubicaci√≥n Solicitud</h1></center>
 <center><div id="mapid" style="width: 500px; height: 500px;"></div></center><br><br>
 <script>
 
@@ -33,7 +33,7 @@
 		maxZoom: 18,
 		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
 			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+			'Imagery ¬© <a href="https://www.mapbox.com/">Mapbox</a>',
 		id: 'mapbox.streets'
 	}).addTo(mymap);
 
@@ -104,106 +104,106 @@
     <tr>
       <th scope="col">#</th>
       <th scope="col">Solicitud</th>
-      <th scope="col">UbicaciÛn</th>
+      <th scope="col">Ubicaci√≥n</th>
       <th scope="col">Efecto o consecuencia</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Pasos de cebra en las esquinas mas peligrosas, ver factibilidad de sacar paso de cebra, existe uno metros mas all·.</td>
-      <td>A la entrada al Valle, llegando desde el Mall, frente a la Planta de RevisiÛn TÈcnica.</td>
-      <td>Paso de cebra muy encima, teniendo como referencia que se est· haciendo abandonando de  una calle de alta velocidad, peligro de accidente por alcance.</td>
+      <td>Pasos de cebra en las esquinas mas peligrosas, ver factibilidad de sacar paso de cebra, existe uno metros mas all√°.</td>
+      <td>A la entrada al Valle, llegando desde el Mall, frente a la Planta de Revisi√≥n T√©cnica.</td>
+      <td>Paso de cebra muy encima, teniendo como referencia que se est√° haciendo abandonando de  una calle de alta velocidad, peligro de accidente por alcance.</td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Repintar con pintura de alto tr·fico la acera, no estacionar</td>
+      <td>Repintar con pintura de alto tr√°fico la acera, no estacionar</td>
       <td>A la entrada al Valle Escondido completa, toda la acera que colinda con las automotoras.</td>
-      <td>Posible colisiÛn, obstrucciÛn.</td>
+      <td>Posible colisi√≥n, obstrucci√≥n.</td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Pasos de cebra en las esquinas mas peligrosas, ver factibilidad de cambiar o correr  el paso de cebra.</td>
-      <td>A la entrada del Valle llegando desde el Mall, inicio de calle CataluÒa.</td>
-      <td>El peatÛn no ve el vehÌculo cuando atraviesa, el vehÌculo tiene poco tiempo de reacciÛn, est· en una curva poca visiÛn.</td>
+      <td>A la entrada del Valle llegando desde el Mall, inicio de calle Catalu√±a.</td>
+      <td>El peat√≥n no ve el veh√≠culo cuando atraviesa, el veh√≠culo tiene poco tiempo de reacci√≥n, est√° en una curva poca visi√≥n.</td>
     </tr>
     <tr>
       <th scope="row">4</th>
-      <td>Solicitar la intervenciÛn, con autos mal estacionados letreros no estacionar ni detenerse.</td>
-      <td>Calle CataluÒa frente a los primero edificios.</td>
-      <td>Accidentes, obstrucciÛn, producto de los vehÌculos que esperan pasajeros.</td>
+      <td>Solicitar la intervenci√≥n, con autos mal estacionados letreros no estacionar ni detenerse.</td>
+      <td>Calle Catalu√±a frente a los primero edificios.</td>
+      <td>Accidentes, obstrucci√≥n, producto de los veh√≠culos que esperan pasajeros.</td>
     </tr>
     <tr>
       <th scope="row">5</th>
-      <td>Solicitar la intervenciÛn con autos mal estacionados, letreros no estacionar en Plaza Los EspaÒoles, se estacionan sobre las veredas.</td>
-      <td>Calle CataluÒa frente a Restaurant Sal y Brasas</td>
-      <td>Los vehÌculos est·n destruyendo el pavimento y ·reas verdes</td>
+      <td>Solicitar la intervenci√≥n con autos mal estacionados, letreros no estacionar en Plaza Los Espa√±oles, se estacionan sobre las veredas.</td>
+      <td>Calle Catalu√±a frente a Restaurant Sal y Brasas</td>
+      <td>Los veh√≠culos est√°n destruyendo el pavimento y √°reas verdes</td>
     </tr>
     <tr>
       <th scope="row">6</th>
-      <td>Solicitar la intervenciÛn con autos mal estacionados, letreros no estacionar.</td>
-      <td>Calle CataluÒa con calle Jes˙s Palou</td>
-      <td>Poca visiÛn al doblar de entrada y salida puede provocar un accidente, como referencia ya ocurriÛ.</td>
+      <td>Solicitar la intervenci√≥n con autos mal estacionados, letreros no estacionar.</td>
+      <td>Calle Catalu√±a con calle Jes√∫s Palou</td>
+      <td>Poca visi√≥n al doblar de entrada y salida puede provocar un accidente, como referencia ya ocurri√≥.</td>
     </tr>
     <tr>
       <th scope="row">7</th>
-      <td>SeÒal Ètica de baja velocidad ñ Lomo de toro</td>
-      <td>Calle CataluÒa</td>
-      <td>Atropellos de personas, lugar con afluencia de p˙blico. PUB, ya ha ocurrido con resultado de muerte.</td>
+      <td>Se√±al √©tica de baja velocidad ‚Äì Lomo de toro</td>
+      <td>Calle Catalu√±a</td>
+      <td>Atropellos de personas, lugar con afluencia de p√∫blico. PUB, ya ha ocurrido con resultado de muerte.</td>
     </tr>
     <tr>
       <th scope="row">8</th>
-      <td>SeÒal Ètica de baja velocidad  -Lomo de Toro mekano, niÒos jugando mascotas</td>
-      <td>Calle Jes˙s Palou</td>
-      <td>Atropellos de mascotas o niÒos, ya ha ocurrido muerte y atropello de mascotas.</td>
+      <td>Se√±al √©tica de baja velocidad  -Lomo de Toro mekano, ni√±os jugando mascotas</td>
+      <td>Calle Jes√∫s Palou</td>
+      <td>Atropellos de mascotas o ni√±os, ya ha ocurrido muerte y atropello de mascotas.</td>
     </tr>
     <tr>
       <th scope="row">9</th>
-      <td>Barreras de ContenciÛn en la intersecciÛn</td>
-      <td>Calles Jes˙s Palou con Valencia</td>
-      <td>Con la creaciÛn de la Escuela de Suboficiales de Carabineros y la cantidad de gente que trabaja en el lugar y que a la vez  hace ingreso por el valle a esas instalaciones, el tr·nsito a la llegada de las actividades  es alto y de alta velocidad. Referencia, al doblar los vehÌculos, algunos chocan con la acera, esto a ocurrido.</td>
+      <td>Barreras de Contenci√≥n en la intersecci√≥n</td>
+      <td>Calles Jes√∫s Palou con Valencia</td>
+      <td>Con la creaci√≥n de la Escuela de Suboficiales de Carabineros y la cantidad de gente que trabaja en el lugar y que a la vez  hace ingreso por el valle a esas instalaciones, el tr√°nsito a la llegada de las actividades  es alto y de alta velocidad. Referencia, al doblar los veh√≠culos, algunos chocan con la acera, esto a ocurrido.</td>
     </tr>
     <tr>
       <th scope="row">10</th>
       <td>Lomo de Toro</td>
       <td>Calle Valencia</td>
-      <td>Lo escrito en el p·rrafo precedente.</td>
+      <td>Lo escrito en el p√°rrafo precedente.</td>
     </tr>
     <tr>
       <th scope="row">11</th>
-      <td>Sem·foro con mas tiempo</td>
-      <td>Salida a PaicavÌ</td>
+      <td>Sem√°foro con mas tiempo</td>
+      <td>Salida a Paicav√≠</td>
       <td>Colas en hora punta demasiado largas.</td>
     </tr>
     <tr>
       <th scope="row">12</th>
-      <td>Estudio de Transporte Urbano, con el propÛsito de ver la mitigaciÛn con respecto de la construcciÛn del Colegio Inmaculada ConcepciÛn.</td>
-      <td>Valencia al llegar a AnÌbal Pinto</td>
-      <td>Tacos en las maÒanas y al mediodÌa, lentitud para salir de las personas que van a sus trabajos y que salen de valle.</td>
+      <td>Estudio de Transporte Urbano, con el prop√≥sito de ver la mitigaci√≥n con respecto de la construcci√≥n del Colegio Inmaculada Concepci√≥n.</td>
+      <td>Valencia al llegar a An√≠bal Pinto</td>
+      <td>Tacos en las ma√±anas y al mediod√≠a, lentitud para salir de las personas que van a sus trabajos y que salen de valle.</td>
     </tr>
     <tr>
       <th scope="row">13</th>
       <td>Ver factibilidad de poner letrero con preferencia de transito por cierto sector.</td>
-      <td>Camiones y maquinaria pesada que ingrese al Valle por calles AnÌbal Pinto y  Paicavi, circular por Calle  Tucapel.</td>
-      <td>Posible destrucciÛn de las calles del interior, generaciÛn de polvo y ruido.</td>
+      <td>Camiones y maquinaria pesada que ingrese al Valle por calles An√≠bal Pinto y  Paicavi, circular por Calle  Tucapel.</td>
+      <td>Posible destrucci√≥n de las calles del interior, generaci√≥n de polvo y ruido.</td>
     </tr>
     <tr>
       <th scope="row">14</th>
-      <td>Ver factibilidad de cambiar paradero y sacar ·rboles, lado izquierdo.</td>
-      <td>Desde calle Valencia saliendo a AnÌbal Pinto existen problemas de visibilidad</td>
-      <td>Posible destrucciÛn de las calles del interior, generaciÛn de polvo y ruido.</td>
+      <td>Ver factibilidad de cambiar paradero y sacar √°rboles, lado izquierdo.</td>
+      <td>Desde calle Valencia saliendo a An√≠bal Pinto existen problemas de visibilidad</td>
+      <td>Posible destrucci√≥n de las calles del interior, generaci√≥n de polvo y ruido.</td>
     </tr>
     <tr>
       <th scope="row">15</th>
-      <td>Solicitar la intervenciÛn con autos mal estacionados letreros no estacionar.</td>
-      <td>Calle AnÌbal Pinto con Valencia calle de alta circulaciÛn vehicular.</td>
-      <td>InterrupciÛn de tr·nsito. Existen varios locales de venta seguidos  y la gente se estaciona como si existieran pistas suficientes, se sugiere reforzar con signos de seÒal Ètica de no estacionar.</td>
+      <td>Solicitar la intervenci√≥n con autos mal estacionados letreros no estacionar.</td>
+      <td>Calle An√≠bal Pinto con Valencia calle de alta circulaci√≥n vehicular.</td>
+      <td>Interrupci√≥n de tr√°nsito. Existen varios locales de venta seguidos  y la gente se estaciona como si existieran pistas suficientes, se sugiere reforzar con signos de se√±al √©tica de no estacionar.</td>
     </tr>
     <tr>
       <th scope="row">16</th>
       <td>Cambiar de lugar la campana del vidrio, (lugar de acopio para vidrios y botellas) </td>
-      <td>CataluÒa con Jes˙s Palou</td>
-      <td>Obstaculiza la visiÛn vehicular al doblar. Lo otro, como en frente existe un PUB, el lugar se ha convertido en el depÛsito de todo tipo de basura, la cual es desordenada por perros.
+      <td>Catalu√±a con Jes√∫s Palou</td>
+      <td>Obstaculiza la visi√≥n vehicular al doblar. Lo otro, como en frente existe un PUB, el lugar se ha convertido en el dep√≥sito de todo tipo de basura, la cual es desordenada por perros.
 </td>
     </tr>
 
