--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 	L.marker([-36.798632, -73.059980]).addTo(mymap)
 		.bindPopup("<b>[1]</b> Pasos de cebra en las esquinas mas peligrosas").openPopup();
 	L.marker([-36.8006007,-73.05719]).addTo(mymap)
-		.bindPopup("<b>[2]</b>");
+		.bindPopup("<b>[2]</b> Repintar con pintura de alto tráfico la acera, no estacionar");
 	L.marker([-36.8022195,-73.0573801]).addTo(mymap)
-		.bindPopup("<b>[3]</b>");
+		.bindPopup("<b>[3]</b> Pasos de cebra en las esquinas mas peligrosas, ver factibilidad de cambiar o correr el paso de cebra.");
 	L.marker([-36.8028878,-73.0578872]).addTo(mymap)
-		.bindPopup("<b>[4]</b>");
+		.bindPopup("<b>[4]</b> Solicitar la intervención, con autos mal estacionados letreros no estacionar ni detenerse.");
 	L.marker([-36.8033232,-73.0582975]).addTo(mymap)
-		.bindPopup("<b>[5]</b><br/><b>[16]</b>");
+		.bindPopup("<b>[5]</b>Solicitar la intervención con autos mal estacionados, letreros no estacionar en Plaza Los Españoles, se estacionan sobre las veredas.<br/><b>[16]</b>  	Cambiar de lugar la campana del vidrio, (lugar de acopio para vidrios y botellas)");
 	/*L.marker([		]).addTo(mymap)
 		.bindPopup("6");
 	L.marker([		]).addTo(mymap)
@@ -54,13 +54,13 @@
 	L.marker([		]).addTo(mymap)
 		.bindPopup("8");							*/	
 	L.marker([-36.8017329,-73.0612552]).addTo(mymap)
-		.bindPopup("<b>[9]</b>");
+		.bindPopup("<b>[9]</b> Barreras de Contención en la intersección");
 	/*L.marker([		]).addTo(mymap)
 		.bindPopup("10");		*/
 	L.marker([-36.8032943,-73.0553389]).addTo(mymap)
-		.bindPopup("<b>[11]</b>");
+		.bindPopup("<b>[11]</b> Semáforo con mas tiempo");
 	L.marker([-36.8067876,-73.0657326]).addTo(mymap)
-		.bindPopup("<b>[12]</b><br/><b>[14]</b><br/><b>[15]</b><br/>");
+		.bindPopup("<b>[12]</b> 	Estudio de Transporte Urbano, con el propósito de ver la mitigación con respecto de la construcción del Colegio Inmaculada Concepción.<br/><b>[14]</b>Ver factibilidad de cambiar paradero y sacar árboles, lado izquierdo.<br/><b>[15]</b> 	Solicitar la intervención con autos mal estacionados letreros no estacionar.");
 /*
 	L.marker([-36.804227,-73.061916]).addTo(mymap)
 		.bindPopup("13");			
